<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.androidprojectprep25may.activity.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_list_user"
        android:name="com.example.androidprojectprep25may.activity.ui.userlist.UserResourceFragment"
        android:label="@string/list_user"
        tools:layout="@layout/fragment_user_list_resource" />

    <fragment
        android:id="@+id/nav_create_user"
        android:name="com.example.androidprojectprep25may.activity.ui.createuser.CreateUserFragment"
        android:label="@string/create_user"
        tools:layout="@layout/fragment_create_user" />
</navigation>