<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/primary"
    tools:context=".fragment.auth.SignupFragment">>

    <LinearLayout
        android:id="@+id/login_container1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:orientation="vertical"
        android:layout_marginHorizontal="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/layout_name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/create_user"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold|italic"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/first_name"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:paddingHorizontal="8dp"
            android:layout_marginBottom="12dp"
            android:id="@+id/firstName"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            android:background="@drawable/field_background_rectangle"
            android:text="" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/last_name"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:paddingHorizontal="8dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/lastNameInput"
            android:hint="@string/hint_last_name"
            android:inputType="textPersonName"
            android:background="@drawable/field_background_rectangle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/prompt_email"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <EditText
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:paddingHorizontal="8dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/emailSignup"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:background="@drawable/field_background_rectangle"
            android:text="" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/prompt_password"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:paddingHorizontal="8dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/passwordSignup"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:background="@drawable/field_background_rectangle"
            android:text="" />

        <Button
            android:id="@+id/submitBtn"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:backgroundTint="@color/black"
            android:layout_height="wrap_content"
            android:textColor="@color/primary"
            android:text="@string/create_user"/>

        <Button
            android:id="@+id/backBtn"
            android:layout_width="match_parent"
            android:backgroundTint="@color/primary"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="Already have an account? Login"/>

    </LinearLayout>

</LinearLayout>